--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body::before {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url("/images/background.webp");
+  background-image: url("background.webp");
   background-size: cover;
   background-position: center;
   filter: brightness(30%);
